snapshots/onug_cost_optimized_s3_path/aws_configs/accounts/028403472736/us-west-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0224e0b025d330c93",
     "NetworkAclId": "acl-01fdcaa80cde22e09",
     "SubnetId": "subnet-02cfa025b01a00584"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-01fdcaa80cde22e09",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-it-west"
    }
   ],
   "VpcId": "vpc-0c4e7b95bbfab3bea"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0418d5376422f5704",
     "NetworkAclId": "acl-0549ca3fbd370c0c5",
     "SubnetId": "subnet-0ab3536c5d5baa484"
    },
    {
     "NetworkAclAssociationId": "aclassoc-00e75150c481136cd",
     "NetworkAclId": "acl-0549ca3fbd370c0c5",
     "SubnetId": "subnet-01ab0103f75a0ce5a"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0549ca3fbd370c0c5",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-it-west"
    }
   ],
   "VpcId": "vpc-0c4e7b95bbfab3bea"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-0a7e43e5577e9c5d5",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0c4e7b95bbfab3bea"
  }
 ]
}
